@@ -1,4 +1,7 @@
 
+Development version (next release)
+- Made it possible to run the unit-tests independently of the provided OpenCL kernel samples
+
 Version 2.3.1
 - Fixed a bug where an output buffer could not be used as input at the same time
 - Fixed computing the validation error for half-precision fp16 data-types
